--- a/App_Plugins/Example/Views/editor.html
+++ b/App_Plugins/Example/Views/editor.html
@@ -13,5 +13,9 @@
 		<div class="umb-editor" ng-show="vm.state == vm.edit">
 			<input type="text" ng-model="vm.connector">
 		</div>
+		
+		<div ng-show="vm.state == vm.preview">
+			This text appears when you add this property to a DocType
+		</div>		
 	</div>
 </div>
