--- a/App_Plugins/Example/Views/config.html
+++ b/App_Plugins/Example/Views/config.html
@@ -1,4 +1,4 @@
-﻿<div class="ng-cloak terratype" ng-controller="example.property.editor as vm" ng-init="vm.initConfig()">
+﻿<div class="ng-cloak" ng-controller="example.property.editor as vm" ng-init="vm.initConfig()">
 	<div class="umb-el-wrap control-group">
 
 		<umb-load-indicator ng-if="vm.state == vm.loading"></umb-load-indicator>
